[gd_scene load_steps=8 format=3 uid="uid://be8ls1bc3hayv"]

[ext_resource type="Script" path="res://scripts/ui/card_choice_screen.gd" id="1_s4quk"]

[sub_resource type="Animation" id="Animation_pw06t"]
resource_name = "chose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CelebrationLeft:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CelebrationRight:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_570i2"]
resource_name = "show"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Card2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CelebrationLeft:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CelebrationRight:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rf8dh"]
_data = {
"chose": SubResource("Animation_pw06t"),
"show": SubResource("Animation_570i2")
}

[sub_resource type="Gradient" id="Gradient_wi3i7"]
offsets = PackedFloat32Array(0, 0.264286, 0.5, 0.75, 1)
colors = PackedColorArray(1, 0, 0, 1, 0, 1, 0, 1, 0, 0.00784314, 1, 1, 0.713726, 0.054902, 1, 1, 1, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r3gjy"]
gradient = SubResource("Gradient_wi3i7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x57yw"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 50.0
angle_min = -720.0
angle_max = 720.0
spread = 22.0
initial_velocity_min = 300.0
initial_velocity_max = 500.0
gravity = Vector3(0, 98, 0)
scale_min = 5.0
scale_max = 15.0
color_ramp = SubResource("GradientTexture1D_r3gjy")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="CardChoiceScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s4quk")
metadata/_edit_use_anchors_ = true

[node name="Card1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -128.0
offset_right = -36.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 128)

[node name="Card2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -128.0
offset_right = 164.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 128)

[node name="card_animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rf8dh")
}

[node name="CelebrationLeft" type="GPUParticles2D" parent="."]
position = Vector2(-4, 654)
rotation = -1.10573
amount = 128
process_material = SubResource("ParticleProcessMaterial_x57yw")
lifetime = 3.0
explosiveness = 1.0
randomness = 1.0

[node name="CelebrationRight" type="GPUParticles2D" parent="."]
position = Vector2(1151, 648)
rotation = 4.26789
amount = 128
process_material = SubResource("ParticleProcessMaterial_x57yw")
lifetime = 3.0
explosiveness = 1.0
randomness = 1.0
